<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/breed_detail_layout"
    android:visibility="visible"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/breed_image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/breed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/breed_name_label"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="20dp"
        card_view:contentPadding="10dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/breed_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:hint="@string/breed_description_label"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_marginTop="16dp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_weight_label"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/breed_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/breed_weight"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_life_span_label"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/breed_life_span"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/breed_life_span"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/breed_origin_label"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/breed_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/breed_origin_label"
                        android:textColor="@android:color/black"
                        android:textAlignment="center"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breed_temperament_label"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/breed_temperament"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/breed_temperament_label"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="5dp"
                android:padding="10dp"
                android:text="@string/favourite_button_label"
                android:textSize="16sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_thumb_up_black_24dp"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:strokeColor="@color/colorPrimary"
                android:onClick="saveBreed"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>